# ComfyUI-Easy-GLMOCR

./: README.md  __init__.py  dots.py  glm_ocr.py  nodes.py  prompt_templates.yaml  pyproject.toml  requirements.txt
locales/en/: nodeDefs.json
locales/zh/: nodeDefs.json
sample_workflow/: ocr-glm.json
utility/: download.py  image.py
