[project]
name = "comfyui-easy-glmocr"
description = "ComfyUI-Easy-GLMOCR is a custom node for ComfyUI that provides text extraction via the GLM-OCR engine."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["transformers>=4.51.3"]

[project.urls]
Repository = "https://github.com/yolain/ComfyUI-Easy-GLMOCR"

[tool.comfy]
PublisherId = "yolain"
DisplayName = "ComfyUI-Easy-GLMOCR"
Icon = ""
